Fix: footer logos alignment

--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -612,7 +612,7 @@ footer {
   }
 
   .ref-wrapper {
-    display: flex;
+    @include flex;
     justify-content: center;
     flex-direction: column;
 
